# django-wireframe

./: LICENSE  README.md  pyproject.toml
src/wire/: admin.py  apps.py  forms.py  handlers.py  logger.py  mail.py  markdown.py  mixins.py  models.py  path.py  views.py
src/wire/management/commands/: execfile.py  mailtest.py
src/wire/migrations/: 0001_initial.py
src/wire/static/wire/css/: admin-extra.css
src/wire/static/wire/js/: admin-extra.js
src/wire/templates/registration/: base.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
src/wire/templatetags/: wire_tags.py
src/wire/urls/: account.py
src/wire/utils/: __init__.py  debug.py  imaging.py  qr.py  rand.py  urls.py
