[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-wireframe"
dynamic = ["version"]
description = "Common Django helpers and tools"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["django", "tools"]
authors = [
    { name = "David Krauth", email = "dakrauth@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 5.2",
        "Framework :: Django :: 6.0",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Utilities",
]

dependencies = [
    "Django>=5.2,<6.1",
    "django-taggit>=6.1.0",
    "mistune>=3.2.1",
]

[project.urls]
Homepage = "https://github.com/dakrauth/django-wireframe"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
    "pytest-clarity",
]
dev = [
    "build",
    "ipython",
    "ipdb",
    "twine",
    "ruff",
    "django-extensions",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wire*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "wire.__version__"}

[tool.ruff]
cache-dir = ".dev/ruff"
line-length = 100
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]
